--- a/style.css
+++ b/style.css
@@ -218,14 +218,15 @@ img {
 	width: 100%;
 	height: auto;
 }
-
+/* 
 #footer {
 	position: fixed;
 	bottom: 0px;
-	left: 0px;
+	left: 20px;
 	width: 100%;
-}
+} */
 
-.mg-left {
-	margin-left: 80%;
+.footer {
+	margin-left: 20px;
+	margin-top: 40px;
 }
